<resources>
    <string name="app_name">TCHOP\'MO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tchop_mo_app">TCHOP\'MO App</string>
    <string name="la_meilleur_piza_du_kmer">La meilleur piza du Kmer</string>
    <string name="se_connecter">Se connecter</string>
    <string name="la_meilleure_pizza_du_kmer">la meilleure pizza du kmer</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="nom_complet">Nom complet</string>
    <string name="adresse_maill">Adresse maill</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="acceuil">Acceuil</string>
    <string name="nos_pizzas">Nos pizzas</string>
    <string name="favoris">Favoris</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mon_panier">Mon panier</string>
    <string name="mon_pannier">Mon pannier</string>
    <string name="fnketchemen_gmail_com">fnketchemen@gmail.com</string>
    <string name="derfnk7">DerfNK7</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="_10_00_22_00">10:00 - 22:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="achetter">Achetter</string>
    <string name="total">Total</string>
    <string name="xaf_10000">XAF 10000</string>
    <string name="pizza_jour">Pizza jour</string>
    <string name="description">Description</string>
    <string name="reductiuon">Reductiuon</string>
</resources>